feat(ui): display subflow content in topology (#2007)
closes #774